// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Skeleton Create a Pulse Circle skeleton 1`] = `
<div>
  <div
    class="animate-pulse"
  >
    <div
      class="bg-slate-700 mb-2 aspect-square rounded-full w-full"
    />
    <div
      class="bg-slate-700 mb-2 aspect-square rounded-full w-full"
    />
    <div
      class="bg-slate-700 mb-2 aspect-square rounded-full w-full"
    />
  </div>
</div>
`;

exports[`Skeleton Create a Pulse Square skeleton 1`] = `
<div>
  <div
    class="animate-pulse"
  >
    <div
      class="bg-slate-700 mb-2 rounded w-full h-4"
    />
    <div
      class="bg-slate-700 mb-2 rounded w-full h-4"
    />
  </div>
</div>
`;

exports[`Skeleton snapshot a Pulse container 1`] = `
<div>
  <div
    class="animate-pulse"
  />
</div>
`;
